# Proyecto-Hospital

./: BD_HOSPITAL  CMakeLists.txt  README.md  build.bat  config.ini  log.txt
bd/: mainbd.c  mainbd.h
clases/: Cita.cpp  Cita.h  HistorialMedico.cpp  HistorialMedico.h  Medico.cpp  Medico.h  Paciente.cpp  Paciente.h  Persona.cpp  Persona.h  Usuario.cpp  Usuario.h
cliente/: CMakeLists.txt  main.cpp  menu.cpp  menu.h  menu_login.cpp  menu_login.h  protocolo.cpp  protocolo.h
entidades/: cita.c
funciones/: CMakeLists.txt  funciones_citas.cpp  funciones_citas.h  funciones_historiales.cpp  funciones_historiales.h  funciones_pacientes.cpp  funciones_pacientes.h
lib/: CMakeLists.txt
lib/include/: hospital.h
lib/src/: hospital.c
lib/src/entidades/: cita.h  historial.c  historial.h  paciente.c  paciente.h  usuario.c
lib/src/main/: main.c
lib/src/menu/: funcionesMenu.c  funcionesMenu.h
main/: main.c
menu/: funcionesMenu.c  funcionesMenu.h  log.c  log.h  menus.c  menus.h  paciente.c  usuario.c  usuario.h
servidor/: CMakeLists.txt  funciones_pacientes.cpp  funciones_pacientes.h  login.cpp  login.h  main.cpp  protocolo.cpp  protocolo.h
